# fast-api-base

./: README.md  pyproject.toml
app/: config.py  conftest.py  main.py  settings.toml
app/routers/tests/: test_users.py
